<resources>
    <string name="app_name" translatable="false">ToTalk</string>
    <string name="menu_credits">Credits</string>
    <string name="menu_dial">Dialpad</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_abc">ABC</string>
    <string name="asterisk">*</string>
    <string name="number_0">0</string>
    <string name="hash">#</string>
    <string name="number_def">DEF</string>
    <string name="number_ghi">GHI</string>
    <string name="number_JKL">JKL</string>
    <string name="number_mno">MNO</string>
    <string name="number_pqrs">PQRS</string>
    <string name="number_tuv">TUV</string>
    <string name="number_wxyz">WXYZ</string>
    <string name="number_plus">+</string>
    <string name="number_1_alphabet">-</string>
    <string name="create_account">Create account</string>
    <string name="verify_your_number">Enter 6-digit code</string>
    <string name="enter_phone_desp">We\'ll send an SMS with a verification code. SMS fees may apply.</string>
    <string name="enter_code">Enter OTP</string>
    <string name="enter_code_descp">Your code was sent to %1$s</string>
    <string name="referral_code">Referral Code</string>
    <string name="enter_ref_code_desp">Please enter the referral code to get up to $5 on startup.</string>
    <string name="skip">Skip</string>
    <string name="check_in_desp">Earn up to $5 credits daily.</string>
    <string name="watch_ad_desp">Earn up to $10 credits.</string>
    <string name="referral_desp">Earn up to $50 by refer to your friends.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="menu_home">Home</string>
    <string name="home_recents">Recent</string>
    <string name="home_contacts">Contacts</string>
    <string name="menu_call_rates">Call Rates</string>
    <string name="menu_settings">Settings</string>
    <string name="buy_credits">Buy Credits</string>
    <string name="choose_your_plan">Choose your plan</string>
    <string name="bronze_value">$5</string>
    <string name="bronze">BRONZE</string>
    <string name="btn_buy">Buy</string>
    <string name="gold">GOLD</string>
    <string name="gold_value">$15</string>
    <string name="silver">SILVER</string>
    <string name="silver_value">$10</string>
    <string name="current_balance">Current Balance</string>
    <string name="get_bonus">Get Bonus</string>
    <string name="earn_credits">Earn Credits</string>
    <string name="daily_check_in">Daily Check In</string>
    <string name="watch_ads">Watch Videos</string>
    <string name="referral_program">Referral Program</string>
    <string name="watch">Watch</string>
    <string name="bonus">Bonus</string>
    <string name="bonus_desp">Hourly bonus active after each hour.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="close">Close</string>
    <string name="congrats">Congrats!</string>
    <string name="earn">EARN</string>
    <string name="buy">BUY</string>
    <string name="credit_history">Credit History</string>
    <string name="phone_number">Phone number</string>
    <string name="search_contact">Search Contact</string>
    <string name="balance">Balance</string>
    <string name="call_rate">Call Rate / min</string>
    <string name="call">Call</string>
    <string name="cancel">Cancel</string>
    <string name="duration">Duration</string>
    <string name="credit_used">Credit Used</string>
    <string name="connecting">Connecting…</string>
    <string name="call_failed">Call Failed</string>
    <string name="outgoing_call">Connecting…</string>
    <string name="call_failed_message">Unable to initiate a call, please try again later.</string>
    <string name="call_ended">Call Ended</string>
    <string name="called">Called</string>
    <string name="credit">Credit</string>
    <string name="call_history">Call History</string>
    <string name="unknown_number">Unknown Number</string>
    <string name="menu_more">More</string>
    <string name="name">Name</string>
    <string name="select_custom_plan">Choose your max. credit you want to buy.</string>
    <string name="loading">Loading</string>
    <string name="account">Account</string>
    <string name="call_rates_summary">List of all countries call rates</string>
    <string name="sync_contacts">Auto Sync</string>
    <string name="sync_contacts_summary">Sync your contacts</string>
    <string name="bonus_notification">Notification</string>
    <string name="info">Info</string>
    <string name="bonus_notification_summary">Hourly Bonus Reminder</string>
    <string name="resend_code_in">RESEND CODE</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="logingin">Logging in…</string>
    <string name="sending_code">Sending code…</string>
    <string name="try_again">Try Again</string>
    <string name="oops">Oops</string>
    <string name="network_error">Something went wrong, please check your internet connection and try again.</string>
    <string name="country_name">Country name, Country code</string>
    <string name="importing_contacts">Importing Contacts</string>
    <string name="import_contacts">Import Contacts</string>
    <string name="no_contacts_found">No Contacts Found</string>
    <string name="no_credit_history">No Credit History</string>
    <string name="estimation">Estimated Call Duration</string>
    <string name="noti_bonus_title">Bonus Time!!</string>
    <string name="noti_bonus_desp">Your hourly bonus is available now with up 1$0</string>
    <string name="referral_code_optional">Code (Optional)</string>
    <string name="mobile_number">Phone number</string>
    <string name="invalid_code">Invalid Code</string>
    <string name="total_credit_used">Total credits used for this call is </string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="check_for_update">Check for update</string>
    <string name="v1_1_0">v1.1.0</string>
    <string name="string_reward_message">You got %1$s, this credit will add to your account.</string>
    <string name="no_recent_found">No Recent Found</string>
    <string name="country">Country</string>
    <string name="search_country">Search Country</string>
    <string name="contact_name_phone_number">Contact name, Phone number</string>
    <string name="signup">Sign up</string>
    <string name="something_went_wrong_please_check_your_internet_connection_and_try_again">Something went wrong, please check your internet connection and try again.</string>
    <string name="login">Login</string>
    <string name="country_not_supported">Sorry, we don\'t support this country.</string>
    <string name="getting_info">Getting info...</string>
    <string name="send_code">Send Code</string>
    <string name="error_code">Error</string>
    <string name="billing_API_version_is_not_supported">Billing API version is not supported</string>
    <string name="developer_error">Developer Error</string>
    <string name="error_fatal">Fatal error during the API action</string>
    <string name="requested_feature_not_supported">Requested feature is not supported by Play Store on the current device</string>
    <string name="already_owned">Failure to purchase since item is already owned</string>
    <string name="network_connection_down">Network connection is down</string>
    <string name="service_time_out">The request has reached the maximum timeout before Google Play responds</string>
    <string name="ads_not_available">Ads not available. Try again later</string>
    <string name="title_ads">Earn Credits</string>
    <string name="message_ads">You can easily earn credit by watching Ads</string>
    <string name="watch_ad">Watch Ad</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_ad_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="native_ad_id" translatable="false">" ca-app-pub-3940256099942544/2247696110"</string>
    <string name="reward_ad_id" translatable="false">ca-app-pub-3940256099942544/5224354917</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="clear_number">Clear Number</string>
    <string name="network_not_avaliable">Network Not Available</string>
    <string name="send_code_again">Code sent again</string>
    <string name="login_failed">Login Failed</string>
    <string name="dtmf_received">DTMF rx %s</string>
    <string name="reject">Reject</string>
    <string name="answer">Answer</string>
    <string name="text_ringing">Ringing...</string>
    <string name="call_in_progress">Call in progress...</string>
    <string name="got_it">Got it</string>
    <string name="string_global_calls">Global Calls</string>
    <string name="string_free_credits">Free Credits</string>
    <string name="string_private_number">Private Number</string>
    <string name="global_call_description">ToTalk provide you Global free calls with private number, earn credits and make calls now</string>
    <string name="free_credits_description">ToTalk provide free credits daily to its user</string>
    <string name="private_number_description">ToTalk supports private number calling to keep its user secure</string>
</resources>
