<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/menu_dial"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_dial" />

        <item
            android:id="@+id/menu_credits"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_credits" />
        <item
            android:id="@+id/menu_search"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_credits" />
        <item
            android:id="@+id/menu_more"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_credits" />
    </group>
</menu>
